--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,32 @@
-version: '3'
+version: '3.5'
 services:
-    app:
-        container_name: app
-        restart: always
-        build: .
-        depends_on:
-          - postgres
-        command: npm run dev
-        # command: npm run debug
-        volumes:
-            - .:/usr/src/app
-            - /usr/src/app/node_modules
-        ports:
-            - '8000:8000'
-            - "9222:9222"
-        links:
-            - postgres
+    # app:
+    #     container_name: app
+    #     restart: always
+    #     build: .
+    #     depends_on:
+    #       - postgres
+    #     command: npm run dev
+    #     # command: npm run debug
+    #     volumes:
+    #         - .:/usr/src/app
+    #         - /usr/src/app/node_modules
+    #     ports:
+    #         - '8000:8000'
+    #         - "9222:9222"
+    #     links:
+    #         - postgres
     postgres:
-      image: postgres:10.4
+      image: "postgres:12"
+      restart: "always"
       ports:
-        - "35432:5432"
+        - "5432:5432"
+      # volumes:
+      #   - database-data:/var/lib/postgresql/data
       environment:
         POSTGRES_USER: user
         POSTGRES_PASSWORD: pass
         POSTGRES_DB: db
+
+# volumes:
+#   database-data: {}
