--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   },
   "homepage": "https://github.com/AntonyDamico/realworld-adamico#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
