--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon --watch src -e ts --exec npm run dev:start",
     "start": "node .",
     "test": "jest",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "debug": "nodemon --legacy-watch --watch src --inspect=0.0.0.0:9222 --nolazy ./dist/index.js"
   },
   "repository": {
