--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
