using error handlers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm run tsc",
     "dev:start": "npm run build && npm run start",
     "dev": "nodemon --watch src -e ts --exec npm run dev:start",
+    "clear-port": "fuser -k 8000/tcp",
     "start": "node .",
     "test": "jest",
     "lint": "eslint '*/**/*.{js,ts}'",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
