--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/AntonyDamico/realworld-adamico#readme",
   "dependencies": {
+    "@types/joi": "^14.3.4",
     "body-parser": "^1.19.0",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
