--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
-    "uuid": "^8.3.0",
-    "validator": "^13.1.1"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
